cabal-version:      2.4
name:               testapp
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Just a small app to test haskell and cabal

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
-- license-file:       LICENSE
author:             p6nj
maintainer:         breee@duck.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable testapp
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
